  across the entire cube. The way the statistics calculations are
  implemented in the code was changed, using a new statistics class.

* This means we can report a peak signal-to-noise value for each
  detection. This is given in the text-based output, as well as in the
  summary information above the spectral output for each source.

* There a different Flags reported for the case of an object lying on
  the spatial edge and spectral edge of the cube (E and S respectively).

* A few minor bug fixes:
  - When providing a subsection, any axes with the range given by *
    had the pixel values offset incorrectly. This has been fixed.
  - Negative searches now correctly invert the reconstructed array
    when it is read in from a file.

* Other minor changes to the code, to improve memory handling and
  remove redundant arrays and variables.


Duchamp version 1.0.5 (2006/09/06)
----------------------------------

Since version 1.0, there have been a range of mostly minor
changes. These are generally bug-fixes, thanks to feedback from a
number of users, as well as a few extra features. 

Here is a summary of the changes since version 1.0:

USER INTERFACE:

* The user is now able to enter the value of flag parameters in the
  parameter file as strings, as well as integers (so one can enter
  true or 1 to give the same result).

GRAPHICAL OUTPUT:

* Added a new function that draws the edge of the blank region on the
  maps and image cutouts. There is a new flag parameter --
  drawBlankEdges -- that controls the use of this function (the
  default is true).
  Also, the edge of the field is plotted on the image cutouts as a
  yellow line. This distinguishes it from the purple blank pixel
  dividing line.

* The size of the tick mark in the image cutout (indicating the
  spatial scale of the image) is now adaptable, so that it shows the
  scale that best fits the image (ranging from 1 arcsec to 15
  degrees). (This is a change from the previous standard length of 15