@@ -72,6 +72,9 @@ not matter, they are grouped here in logical sections.
   file showing each of the detected objects, coloured in greyscale by
   the number of channels spanned by each pixel. Also shows pixel and
   WCS coordinates.
+\item[flagXOutput \texttt{[true]}] A flag to say whether to display a
+  0th moment map in a PGPlot Xwindow. This will be in addition to any
+  that are saved to a file.
 \end{entry}
 
 \secB*{Modifying the cube}
